add: Swagger Custom documentation for controller and catch empty body request